--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>ru.fella.learn</groupId>
     <artifactId>patterns</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+        </dependency>
+    </dependencies>
 
 
     <properties>
